[package]
name = "python-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rayon = "1.8"
mimalloc = "0.1"
windows-sys = { version = "0.52", features = ["Win32_System_ProcessStatus", "Win32_System_Threading"] }

[profile.release]
allocator = "mimalloc"

[profile.dev]
allocator = "mimalloc"

